--- a/About.html
+++ b/About.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="veiwport" content="with=device-width, initial scale=1.0">
-    <title>Probomedicare</title>
+    <title>E-HealthCare</title>
     <link rel="stylesheet" href="About.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -28,6 +28,8 @@
                         <li><a href="FAQ.html.html">FAQ</a></li>
                         <li><a href="Blog.html">BLOG</a></li>
                         <li><a href="bookanappointment.html">BOOK AN APPOINTMENT</a></li>
+                        <li><a href="login.html">LOGIN</a></li>
+                        <li><a href="registration.html">REGISTRATION</a></li>
                     </ul>
                 </div>
                
@@ -52,9 +54,9 @@
 			<h2 class="CH">Company History</h2>
     </div>
       <br>
-			<p class="P">When the COVID-19 pandemic upended daily life in the United States, our founding doctors had a dilemma. We wanted to continue 
+			<p class="P">When the COVID-19 pandemic upended daily life in the India, our founding doctors had a dilemma. We wanted to continue 
 			to offer our services to our patients without putting their health at risk. As a result, in March 2020, our telemedicine company 
-			Probomedicare was launched. At the launch of our company, we had only a few customers and five doctors. Since then, we have been gaining 
+			E-HealthCare was launched. At the launch of our company, we had only a few customers and five doctors. Since then, we have been gaining 
 			many customers and have even employed many medical proffesionals from various fields to work for our company as well. We have expanded 
 			our company to provide services to other countries and have quickly been reaching new milestones. We strive to make our website as 
 			streamlined as possible for our users, so we hope that your experience with us goes smoothly. </p>
@@ -73,7 +75,7 @@
 			<p class="P"> Dr. Sigmann is a general pediatrician who graduated from VCU. Dr. Sigmann specialized in annual checkups before the pandemic began. 
 			Dr. Sigmann should be consulted for annual checkups, and we recommend rescheduling your cancelled checkups with Dr. Sigmann. He has had 
 			24 years of in-the-field experience and was inspired to pursue a medical career from the age of 9. Dr. Sigmann joined us to provide a 
-			seamless gap between our customers' in-person checkups that have been interrupted by the global health crisis. At Probomedicare, Dr. Sigmann 
+			seamless gap between our customers' in-person checkups that have been interrupted by the global health crisis. At E-HealthCare, Dr. Sigmann 
 			is the director of the Annual Checkups section. </p>
       <br/>
       	<h3 class="Docs">Dr. Zhang</h3>
@@ -88,7 +90,7 @@
 			<p class="P"> Dr. Zhang also graduated from VCU with a degree in pediatrics. Dr. Zhang specializes in general checkups 
 			and should be consulted for mild to moderate problems and potential symptoms of common illnesses. Dr. Zhang has had 
 			36 years of in-the-field experience and is well known for her ability to make an appointment more enjoyable for the 
-			patient. Her passion for medicine was driven by her desire to help people. Dr. Zhang joined Probomedicare as a general 
+			patient. Her passion for medicine was driven by her desire to help people. Dr. Zhang joined E-HealthCare as a general 
 			pediatrician and is the director of the General Appointments section. </p>
       <br/>
 				<h3 class="Docs"> Dr. Mangan</h3>
@@ -103,7 +105,7 @@
 			dentistry. Dr. Mangan's passsion for dentistry was fueled by his respect for the phrase "a better smile is a better future". 
 			He has had 15 years of experience in the field, along with his time during his residency. This expert should be consulted 
 			for any problems relating to oral or dental health. Dr. Mangan joined our company to expand our range of function to fields relating 
-			to dentistry. At Probomedicare, Dr. Mangan is the director of the Dentistry section. </p>
+			to dentistry. At E-HealthCare, Dr. Mangan is the director of the Dentistry section. </p>
       <br/>
 				<h3 class="Docs">Dr. Miles</h3>
         <div class="Docpic">
@@ -116,7 +118,7 @@
 			<p class="P"> Dr. Miles graduated from Stanford University with a degree in psychiatry. Dr. Miles is a psychiatrist who specializes 
 			in mental health therapy. He is the expert to consult for individuals who feel like they are experiencing mental health problems. 
 			Dr. Miles has 28 years of in-the-field experience. He was inspired to pursue this career by a desire to end the mental health 
-			crisis in society. At Probomedicare, Dr. Miles is the director of the Mental Therapy section. </p>
+			crisis in society. At E-HealthCare, Dr. Miles is the director of the Mental Therapy section. </p>
       <br/>
 				<h3 class="Docs">Dr. Brayson</h3>
         <div class="Docpic">
@@ -128,7 +130,7 @@
       
 			<p class="P"> Dr. Brayson graduated from Harvard with many career choices in mind. He had many career interests throughout his education and 
 			eventually settled on being an ENT (Ear, Nose and Throat) specialist. Dr. Brayson is the director of the Special Categories section 
-			at Probomedicare, so he should be consulted for issues relating to categories that are not covered by the other sections. Dr. Brayson has 
+			at E-HealthCare, so he should be consulted for issues relating to categories that are not covered by the other sections. Dr. Brayson has 
 			had 43 years of experience in the field, and is known for having taken only 6 vacations throughout his career. </p>
       <br/>
      </div> 
@@ -167,15 +169,15 @@
 				</p>
 
 
-				<p class="footer-company-name">All Rights Reserved © 2024 Probomedicare</p>
+				<p class="footer-company-name">All Rights Reserved © 2024 E-HealthCare</p>
 			</div>
 
 			<div class="footer-center">
 				<div>
 					<i class="fa fa-map-marker"></i>
 					  <p><span>11200 High Ridge Rd,
-						 Richmond, Virginia, 23052</span>
-						United States</p>
+						 Greater Noida, UP, 23052</span>
+						India</p>
 				</div>
 
 				<div>
@@ -184,7 +186,7 @@
 				</div>
 				<div>
 					<i class="fa fa-envelope"></i>
-					<p><a href="mailto:Support@Probomedicare.com">Support@Probomedicare.com</a></p>
+					<p><a href="mailto:Support@E-HealthCare.com">Support@E-HealthCare.com</a></p>
 				</div>
 			</div>
 			<div class="footer-right">
