--- a/ContactUs.html
+++ b/ContactUs.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta name="veiwport" content="with=device-width, initial scale=1.0" />
-    <title>Probomedicare</title>
+    <title>E-HealthCare</title>
     <link rel="stylesheet" href="Contactus.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -70,7 +70,7 @@
       </div>
       <h3>Email</h3>
       <p class="cooltext" Estimated Time: 1-2 Days</p>
-      <p>Email may take up to one day to be responded to. Our email is support@Probomedicare.com </p>
+      <p>Email may take up to one day to be responded to. Our email is support@E-HealthCare.com </p>
     </div>
     <div class="cmo">
       <div class="cmimg">
@@ -119,7 +119,7 @@
 				</p>
 
 
-				<p class="footer-company-name">All Rights Reserved © 2024  Probomedicare</p>
+				<p class="footer-company-name">All Rights Reserved © 2024  E-HealthCare</p>
 			</div>
 
 			<div class="footer-center">
@@ -136,7 +136,7 @@
 				</div>
 				<div>
 					<i class="fa fa-envelope"></i>
-					<p><a href="mailto:Support@ Probomedicare.com">Support@ Probomedicare.com</a></p>
+					<p><a href="mailto:Support@ E-HealthCare.com">Support@ E-HealthCare.com</a></p>
 				</div>
 			</div>
 			<div class="footer-right">
