--- a/FAQ.html.html
+++ b/FAQ.html.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="veiwport" content="with=device-width, initial scale=1.0">
-    <title> Probomedicare</title>
+    <title> E-HealthCare</title>
     <link rel="stylesheet" href="FAQ.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -43,9 +43,9 @@
 <section class="GG">
   <main>
   <details>
-    <summary>I live outside the United States and Canada, am I eligible for appointments?</summary>
+    <summary>I live outside the India, am I eligible for appointments?</summary>
     <div>
-      <p>Currently, we do not support visits for people outside of the US and Canada. However, we are planning to extend our services to other countries.</p>
+      <p>Currently, we do not support visits for people outside of the India. However, we are planning to extend our services to other countries.</p>
     </div>
   </details>
 
@@ -115,15 +115,15 @@
 				</p>
 
 
-				<p class="footer-company-name">All Rights Reserved © 2024 Probomedicare</p>
+				<p class="footer-company-name">All Rights Reserved © 2024 E-HealthCare</p>
 			</div>
 
 			<div class="footer-center">
 				<div>
 					<i class="fa fa-map-marker"></i>
 					  <p><span>11200 High Ridge Rd,
-						 Richmond, Virginia, 23052</span>
-						United States</p>
+						 Greater Noida, UP, 23052</span>
+						India</p>
 				</div>
 
 				<div>
@@ -132,7 +132,7 @@
 				</div>
 				<div>
 					<i class="fa fa-envelope"></i>
-					<p><a href="mailto:Support@Probomedicare.com">Support@Probomedicare.com</a></p>
+					<p><a href="mailto:Support@E-HealthCare.com">Support@E-HealthCare.com</a></p>
 				</div>
 			</div>
 			<div class="footer-right">
