--- a/bookanappointment.html
+++ b/bookanappointment.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Book a Probomedicare Appointment</title>
+    <title>Book a E-HealthCare Appointment</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&family=Quicksand&display=swap" rel="stylesheet">
 
@@ -16,7 +16,7 @@
     <div class="testbox">
     <form action="/">
       <div class="banner">
-        <h1>Book a  Probomedicare Appointment</h1>
+        <h1>Book a  E-HealthCare Appointment</h1>
         </div>
         <h3> None of the information in this form will go out to the general public, and it will only be used for contact purposes and for booking the appointment.</h3>
       <div class="item">
@@ -151,7 +151,7 @@
 				</p>
 
 
-				<p class="footer-company-name">All Rights Reserved © 2024  Probomedicare</p>
+				<p class="footer-company-name">All Rights Reserved © 2024  E-HealthCare</p>
 			</div>
 
 				</div>
