--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta name="veiwport" content="with=device-width, initial scale=1.0">
-    <title> Probomedicare</title>
+    <title> E-HealthCare</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -30,14 +30,16 @@
                         <li><a href="FAQ.html.html">FAQ</a></li>
                         <li><a href="Blog.html">BLOG</a></li>
                         <li><a href="bookanappointment.html">BOOK AN APPOINTMENT</a></li>
-                        
+                        <li><a href="login.html">LOGIN</a></li>
+                        <li><a href="registration.html">REGISTRATION</a></li>
+                        <li><a href="medicine.html">MEDICINE</a></li>
                     </ul>
                 </div>
             </nav>
 
   
             <div class="text-box">
-                <h1>Probomedicare</h1>
+                <h1>E-HealthCare</h1>
                 <h3>The Online Medical Company That Provides For All Your Medical Needs.</h3>
                 </div>
 
@@ -116,7 +118,7 @@
   <div class="testimonial-col">
       <img src="test1.jpg">
       <div>
-          <p>My experience with  Probomedicare was amazing! There were few technical difficulties that were resolved almost instantly. Other than that, the doctor helped me a lot. The skin on my arms had tiny bumps that looked like acne. The doctor looked at my arm and diagnosed me with Keratosis pilaris. He also recommended me a cream to help treat it.</p>
+          <p>My experience with  E-HealthCare was amazing! There were few technical difficulties that were resolved almost instantly. Other than that, the doctor helped me a lot. The skin on my arms had tiny bumps that looked like acne. The doctor looked at my arm and diagnosed me with Keratosis pilaris. He also recommended me a cream to help treat it.</p>
 
           <h3>Beverly Santos</h3>
           <h1>★★★★★</h1>
@@ -127,7 +129,7 @@
 <div class="testimonial-col">
       <img src="user2.png">
       <div>
-          <p>  Probomedicare is the best online medical platform that I have ever had the pleasure of using. I have been an active user at Probomedicare for six months now, and I am 100% satisfied. I have saved so much money on doctor appointments ever since I switched to Probomedicare.</p>
+          <p>  E-HealthCare is the best online medical platform that I have ever had the pleasure of using. I have been an active user at E-HealthCare for six months now, and I am 100% satisfied. I have saved so much money on doctor appointments ever since I switched to E-HealthCare.</p>
 <br>
           <h3>Dominic Brown</h3>
           <h1>★★★★★</h1>
@@ -164,15 +166,15 @@
 				</p>
 
 
-				<p class="footer-company-name">All Rights Reserved © 2024  Probomedicare</p>
+				<p class="footer-company-name">All Rights Reserved © 2024  E-HealthCare</p>
 			</div>
 
 			<div class="footer-center">
 				<div>
 					<i class="fa fa-map-marker"></i>
 					  <p><span>11200 High Ridge Rd,
-						 Richmond, Virginia, 23052</span>
-						United States</p>
+						 Greater Noida, UP, 23052</span>
+						India</p>
 				</div>
 
 				<div>
@@ -181,7 +183,7 @@
 				</div>
 				<div>
 					<i class="fa fa-envelope"></i>
-					<p><a href="mailto:Support@Probomedicare.com">Support@Probomedicare.com</a></p>
+					<p><a href="mailto:Support@E-HealthCare.com">Support@E-HealthCare.com</a></p>
 				</div>
 			</div>
 			<div class="footer-right">
