--- a/Blog.html
+++ b/Blog.html
@@ -38,39 +38,32 @@
 <div class="row">
   <div class="L">
     <div class="sq">
-      <h2>Welcome Dr. Phillip and Dr. Sandy to the Probomedicare Family!</h2>
-      <h5>April 15, 2021</h5>
+      <h2>Welcome Dr. Phillip and Dr. Sandy to the E-HealthCare Family!</h2>
+      <h5>April 15, 2024</h5>
       <img class="size-1"src="Image 1.jpg" width="100%" height="auto"
       <p>We have two new doctors who have recently joined us in our mission to provide health care through online services.</p>
       <p>These doctors have graduated from Harvard and John Hopkins University and we are very excited to see what they can provide!</p>
     </div>
     <div class="sq">
       <h2>Eat healthy, live better.</h2>
-      <h5> March 15, 2021</h5>
+      <h5> March 15, 2024</h5>
       <img class="size-1"src="Image 5.jpg" width="100%" height="auto"
       <p>Eating healthy can sometimes be a chore for many individuals, however the benefits of doing so far outweight the downfalls.</p>
       <p>Eating the daily servings of fruits, vegetables, grain, protein, and dairy all positively influence the quality and length of one's life. So, the next time you start eating your delicious slice of pizza, think about how you will get your various other servings.</p>
     </div>
 <div class="sq">
       <h2>1,000,000 users</h2>
-      <h5> February 1, 2021</h5>
+      <h5> February 1, 2024</h5>
       <img class="size-1"src="Image 3.jpg" width="100%" height="auto"
       <p>Thank you all so much for 1,000,000 users</p>
       <p>We started out online health services due to the coronavirus pandemic throughout the world, but realized that this is not only useful during those times but also for patients with strict schedules. It is amazing how we have gotten one million users before our one year aniversary and we will continue to work toward making your experience better.</p>
     </div>
 <div class="sq">
-      <h2>Welcome Canada!</h2>
-      <h5> January 1, 2021</h5>
+      <h2>Welcome Canada</h2>
+      <h5> January 1, 2024</h5>
       <img class="size-1"src="Image 4.jpg" width="100%" height="auto"
       <p>We have extended our online services to Canada to help make our company international.</p>
       <p>We have several doctors who will be able to help individuals from Canada hoping to get check-ups or other health services. We have heard the voices of the people and are trying to spread our services to a larger array of countries and we aim on expanding to the United Kingdom and Australia next.</p>
-    </div>
-<div class="sq">
-      <h2>Donating $100,000 to the American Red Cross</h2>
-      <h5>December 25, 2020</h5>
-      <img class="size-1"src="Image 2.jpg" width="100%" height="auto"
-      <p>During these harsh pandemic times, we understand how much organizations need our help to continue functioning, so we donated $100,000 to the American Red Cross</p>
-      <p>Due to all of the recent support we have been getting from our users, we were able to afford donating this money to this foundation and, in the future, we hope to donate money to other great organizations.</p>
     </div>
   </div>
  
@@ -109,15 +102,15 @@
 				</p>
 
 
-				<p class="footer-company-name">All Rights Reserved © 2024 Probomedicare</p>
+				<p class="footer-company-name">All Rights Reserved © 2024 E-HealthCare</p>
 			</div>
 
 			<div class="footer-center">
 				<div>
 					<i class="fa fa-map-marker"></i>
 					  <p><span>11200 High Ridge Rd,
-						 Richmond, Virginia, 23052</span>
-						United States</p>
+						 Greater Noida, UP, 23052</span>
+						India</p>
 				</div>
 
 				<div>
@@ -126,7 +119,7 @@
 				</div>
 				<div>
 					<i class="fa fa-envelope"></i>
-					<p><a href="mailto:Support@Probomedicare.com">Support@Probomedicare.com</a></p>
+					<p><a href="mailto:Support@E-HealthCare.com">Support@E-HealthCare.com</a></p>
 				</div>
 			</div>
 			<div class="footer-right">
